<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Course</string>
    <string name="activity_route_list">Select a saved route to view</string>
    <string name="activity_delete_route_list">Select the routes to delete</string>
    <string name="action_home">Return to Home Screen</string>
    <string name="button_get_location">Get my location now</string>
    <string name="google_play_error_message">Unable to connect to Google Play Services.  Sorry about that.</string>
    <string name="menu_normal">Map Type: Normal</string>
    <string name="menu_satellite">Map Type: Satellite</string>
    <string name="menu_terrain">Map Type: Terrain</string>
    <string name="menu_hybrid">Map Type: Hybrid</string>
    <string name="fly_to">Update Map Continuously</string>
    <string name="stay_put">Do Not Update Map</string>
    <string name="show_current">Show Current Position</string>
    <string name="show_all">Show Whole Course</string>
    <string name="title_activity_draw_map">Route Map</string>
    <string name="new_run_name">Create a new route</string>
    <string name="compare_run_name">Compete with an existing route</string>
    <string name="view_run_name">View existing routes</string>
    <string name="enter_run_name">Enter new route name</string>
    <string name="button_draw_map">Go!</string>
    <string name="map_info">Course Detail</string>
    <string name="stop">Pause Map</string>
    <string name="resume">Resume</string>
    <string name="reset_map">Reset Map</string>
    <string name="finished">Finished</string>
    <string name="title_activity_run_statistics">Route Statistics</string>
    <string name="button_graph_altitude">Altitude</string>
    <string name="button_graph_speed">Speed</string>
    <string name="button_show_stats">Statistics</string>
    <string name="gp_license">Google Play License</string>
    <string name="show_stats">Statistics</string>
    <string name="show_older_times">Compare</string>
    <string name="use_metric">Distances in meters, km</string>
    <string name="use_imperial">Distances in feet, mi</string>
    <string name="quitApp">Exit App</string>
    <string name="deleteThis">Delete This</string>
    <string name="done">Done</string>
    <string name="deleteMenuName">Delete Saved Routes</string>

</resources>